fdo#42165 make nested joins as per strict ANSI SQL

Change-Id: I605d3811b27c33e35670306bb03b5a796ab72bc0