dbaccess/source/ui/inc/TableConnectionData.hxx
@@ -81,7 +81,8 @@ namespace dbaui
         */
         void normalizeLines();
 
-        OConnectionLineDataVec* GetConnLineDataList(){ return &m_vConnLineData; }
+        const OConnectionLineDataVec* GetConnLineDataList() const { return &m_vConnLineData; }
+        OConnectionLineDataVec* GetConnLineDataList() { return &m_vConnLineData; }
 
         inline TTableWindowData::value_type getReferencingTable() const { return m_pReferencingTable; }
         inline TTableWindowData::value_type getReferencedTable()  const { return m_pReferencedTable;  }
